[gd_scene load_steps=7 format=3 uid="uid://1gufy5i4x3ms"]

[ext_resource type="PackedScene" uid="uid://d14jad0a07fdo" path="res://gui/track_list/track_list.tscn" id="1_2stbi"]
[ext_resource type="Script" path="res://gui/track_edit_panel/track_tags_list.gd" id="1_24tnx"]
[ext_resource type="Script" path="res://gui/track_edit_panel/tag_find_line_edit.gd" id="1_c2tvv"]
[ext_resource type="Theme" uid="uid://5l5rafw6sslk" path="res://gui/track_edit_panel/track_edit_panel.theme" id="2_lw0vv"]
[ext_resource type="Resource" uid="uid://6f7rj7uqakkt" path="res://core/data_base.tres" id="2_oykom"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xig57"]
bg_color = Color(0.07, 0.07, 0.07, 1)

[node name="TrackEditPanel" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="TrackNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 0
clip_text = true

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
split_offset = -270

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
split_offset = 350

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "butto"
flat = true

[node name="TrackList" parent="HSplitContainer/VBoxContainer" instance=ExtResource("1_2stbi")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="TrackTagsList" type="HFlowContainer" parent="HSplitContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_lw0vv")
theme_override_constants/h_separation = 15
script = ExtResource("1_24tnx")
root_db = ExtResource("2_oykom")

[node name="TagFindLineEdit" type="LineEdit" parent="HSplitContainer/ScrollContainer/TrackTagsList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("Tree")
focus_next = NodePath("Tree")
placeholder_text = "add tag"
expand_to_text_length = true
flat = true
caret_blink = true
script = ExtResource("1_c2tvv")
root_db = ExtResource("2_oykom")

[node name="Tree" type="Tree" parent="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit"]
unique_name_in_owner = true
visible = false
top_level = true
layout_mode = 1
offset_left = 175.0
offset_top = 112.0
offset_right = 373.0
offset_bottom = 245.0
focus_neighbor_top = NodePath(".")
focus_next = NodePath("..")
theme_override_styles/panel = SubResource("StyleBoxFlat_xig57")
hide_folding = true
hide_root = true
scroll_horizontal_enabled = false

[connection signal="focus_entered" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" to="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" method="_on_focus_entered"]
[connection signal="focus_exited" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" to="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" method="_on_focus_exited"]
[connection signal="tag_create_pressed" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" to="HSplitContainer/ScrollContainer/TrackTagsList" method="_on_tag_find_line_edit_tag_create_pressed"]
[connection signal="tag_selected" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" to="HSplitContainer/ScrollContainer/TrackTagsList" method="_on_tag_find_line_edit_tag_selected"]
[connection signal="text_changed" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" to="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" method="_on_text_changed" unbinds=1]
[connection signal="text_submitted" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" to="HSplitContainer/ScrollContainer/TrackTagsList" method="_on_tag_find_line_edit_text_submitted"]
[connection signal="visibility_changed" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" to="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" method="_on_visibility_changed"]
[connection signal="focus_entered" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit/Tree" to="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" method="_on_tree_focus_entered"]
[connection signal="focus_exited" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit/Tree" to="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" method="_on_tree_focus_exited"]
[connection signal="item_activated" from="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit/Tree" to="HSplitContainer/ScrollContainer/TrackTagsList/TagFindLineEdit" method="_on_tree_item_activated"]
